2012-10-31: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* PlaylistController.m int -> NSInteger conversions
	* PlaylistInspector.[h|m], AppController.[h|m],
	  GNUmakefile, Resources/PlaylistInspector.gorm,
	  Resources/Player.gorm MPDCon.pcproj/PC.projec
	* Add PlaylistInspector, empty so far

2012-10-29: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GNUmakefile
	* PlaylistController.h
	* PlaylistController.m
	* PlaylistItem.h
	* PlaylistItem.m
	* SongRatingCell.h
	* SongRatingCell.m
	* MPDCon.pcproj/PC.project
	* Resources/Star.tiff 
	* Add Rating of songs in the PlaylistViewer, still
	  with some NSLog output, and still not 100%
        * while there, some int -> NS(U)Integer conversions
	* Add helper method to PlalistItem: _playlistItemPathToRatingKey
	  stolen from RSSKit, and delete keys from the Ratings database
	  when Rating gets set to 0
	* Now that it seems to work as expected, remove NSLogs
	  from SongRatingCell.m PlaylistItem.m

2012-10-19: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* LyricsInspector.m When the server is not reachable
	  tell the user about it in the inspector.
	* GNUmakefile
	* GNUmakefile.preamble
	* MPDConInfo.plist
	* MPDCon.pcproj/PC.project
	* Version 1.3

2012-09-25: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* grant a little bit more space for the title in
	  the lyrics inspector
	* Make the buttons in the PlaylistViewer wider to show
	  all the button text

2012-09-25: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Resources/Player.gorm
	* Resources/SongInspector.gorm
	* SongInspector.[h|m]
	* AppController.[h|m]
	* GNUMakefile
	* PlaylistItem.[h|m]
	* MPDController.m
	* Add an Inspector to see all details about the currently
	  played song. PlaylistItem had to be enhanced to handle
	  all available MPD tags. MPDController had to be enhanced
	  to also set the new parameters of a PlaylistItem.

2012-09-02: Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>